--- a/docker/mssql/Dockerfile
+++ b/docker/mssql/Dockerfile
@@ -8,6 +8,8 @@ COPY create-from-mdf.sql /usr/src/scripts
 COPY create-from-sql.sql /usr/src/scripts 
 COPY entrypoint.sh /usr/src/scripts 
 
+RUN chmod +x /usr/src/scripts/import-data.sh
+
 USER mssql
 ENTRYPOINT /bin/bash ./entrypoint.sh
 
